Login Page with Login-Register Tabs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   fluttertoast: ^8.1.1
   webview_flutter: ^3.0.4
   flutter_socket_io: ^0.6.0
+  firebase_core: ^1.7.0 # required for initializing firebase app
+  firebase_messaging: ^10.0.8 # required for sending/receiving messages through FCM
+  flutter_local_notifications: ^6.0.0 # required to show chat notifications
 
 dev_dependencies:
   flutter_test:
